2010-05-16 Devil Wang <wxjeacen.gmail.com>

    * Add Emacs

2010-05-14 Devil Wang <wxjeacen.gmail.com>
    
    * Add Ailurus un-install script. It helps developers to un-install Ailurus.
	
2010-05-14 Homer Xing <homer.xing@gmail.com>

    * Fix bug: DisableGetty output error on Fedora 13

2010-05-14 HAN Haofu <gtxx3600@gmail.com>

	*Rename 'platfrom' to 'DE'(Desktop Environment)
	*Add attrs (DE_kde,DE_gnome,DE_universe) in install_remove_pane
	*Add new icon velly_icons/software_default_icon.png
	*Move load_app_icon(name) from 'libu.py' to 'loader.py'
	*Add an new attr 'DE' in all 'package_class' to identify the package's desktop environment
	*Add icon on install_remove_pane to show package's desktop environment
	*Add 2 icon files into 'other_icons': 'kde.png', 'gnome.png'
	
2010-05-11 HAN Haofu <gtxx3600@gmail.com>

	*Add icon for package that has no icon
	*Move some relative code to loader.py 

2010-05-11 Homer Xing <homer.xing@gmail.com>

    * Improve show_text_window()
    * Improve other code via show_text_window()

2010-05-06 QI Chengjie <starboy.qi@gmail.com>

    * Sorting icons by name in "System Setting" pane
    * Create imagemagick shortcut
    * Extract the text dialog to a specific function
    * Add "copy url" in the "Fastest Mirror" pane
    * Add timeout for notify
    * Add a Linux skill

2010-05-09 SHANG Yuanchun <idealities@gmail.com>

    * Clear pacman cache on archlinux
    * Class PACMAN for install packages on archlinux
    * Gray apply button when user doesn't want to remove unused kernels
    * hide rows when ailurus can't get L1 and L2 cache info of cpu

2010-05-09 DU Yue <elyes.du@gmail.com>

    * Fix a bug in is_package_names_string(), since some package names may have '_' or '+'.
    * Add some software installation entries for Fedora

2010-05-08 DU Yue <elyes.du@gmail.com>

    * Add XELatex support for Fedora

2010-05-08 Homer Xing <homer.xing@gmail.com>

    * Fix a bug: all repository give no response on Ubuntu hardy.